# deeptoolkit

./: .gitattributes  .gitignore  .travis.yml  Makefile  Pipfile  README.md  azure-pipelines.yml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: codeql-analysis.yml  python-publish.yml
deeptoolkit/: __init__.py  compatibility.py  data.py  evaluation.py  inspection.py  losses.py  system.py
deeptoolkit/blocks/: __init__.py  applied.py  generic.py  hybrid.py
deeptoolkit/core/: __init__.py  functional.py
deeptoolkit/core/batch/: batch_ops.cpp  batch_ops.h
deeptoolkit/data/: __init__.py  data_visualization.py  dataset_ops.py  gather_data.py
deeptoolkit/internal/: acquisition.py  asynchronous.py  beautification.py  conversion.py  helpers.py  validation.py
deeptoolkit/internal/scripts/: get-assets.sh
deeptoolkit/vision/: __init__.py  face_detector.py
scripts/: get-dnn-files.sh
tests/: compatibility-tests.py  data-tests.py
