[metadata]
name = deeptoolkit
version = 0.1.0-alpha
author = Amogh Joshi
author-email = joshi.amoghn@gmail.com
license = MIT
summary = A deep learning library containing implementations of popular algorithms and extensions to TensorFlow and Keras.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/amogh7joshi/deeptoolkit
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[files]
packages = deeptoolkit

[bdist_wheel]
universal = True

